# ontology_generation

./: .dockerignore  .gitignore  BQ_run_module.py  Dockerfile  PythonScriptWrapper.py  README.md  bee_wing_ontology.py  bigbeedetector.xml  ontology_generation_and_analysis.ipynb  pyproject.toml  run_wing_pipeline.sh  seg_object_analysis.ipynb  segment_wing.py  segment_wing_augmented.py  test_sam.ipynb
notebooks/: crop_scratch.ipynb
