[project]
name = "big-bee"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bqapi-ucsb>=1.0.7",
    "numpy>=2.0.0",
    "pillow>=12.1.0",
    "tifffile>=2026.1.28",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "transformers>=5.0.0",
]

[dependency-groups]
dev = [
    "debugpy>=1.8.20",
    "matplotlib>=3.10.8",
]
